2004-08-14  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c:

	Eliminated make_element_submenu function
	
	* popup.c, cong-menus.c: 

	Move context menu's Cut and Copy operation out of auto-generated code and into XML description

	* tree.c, popup.c, cong-ui-hooks.h:

	Replaced Document_Node_ParentWindow callbacks to Document_SelectedNode_ParentWindow

2004-08-13  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c, cong-ui-hooks.h: 

	Removed Document_DispspecElement_Node callbacks

	* cong-dom-view.c, cong-editor-area.c, cong-editor-node-text.c,
	cong-editor-widget.h, cong-editor-widget3.c, cong-menus.c,
	cong-overview-view.c, cong-overview-view.h, cong-primary-window.c,
	cong-primary-window.h, cong-tree-view.c, cong-tree-view.h,
	cong-ui-hooks.h, cong-util.c, cong-util.h, global.h, popup.c,
	tree.c: 

	First pass at a port of the context menu to the GtkAction API

2004-08-12  Geert Stappers  <stappers@stappers.nl>

	*  plugin-docbook.c

	(#149305)

	(#149307)

2004-08-08  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c: 

	Removed dead code

	* cong-fake-plugin-hooks.h, cong-fake-plugin-hooks.c, cong-app.c, Makefile.am:

	Added new file: cong-fake-plugin-hooks.c, to contain the part of cong-app.c that was always changing when adding new plugins

2004-08-05  Michèle Garoche  <michele.garoche@easyconnect.fr>
 
 	* cong-menus.c: 
 	
 	Added trailing ellipsis to Open and New File menu items
 
2004-08-04  Geert Stappers  <stappers@stappers.nl>

	*  plugin-docbook.c

	Added a title at creation time of a article.

2004-08-01  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c, cong-menus.c: 

	Ported the toolbar to the GtkAction API (a big internal simplification!)

	* xmledit.c, popup.c, cong-ui-hooks.h, cong-primary-window.h, cong-primary-window.c, cong-menus.c, cong-document.h: 

	Port of menus from GtkItemFactory to the GtkUIManager/GtkAction API

2004-07-30  David Malcolm  <dmalcolm@redhat.com>
